--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
 </head>
 <body>
     <h1>Welcome to Bali</h1>
+
+    <footer>
+        This project was coded by Cheryl R.Basopo and is open-sourced <a href="https://github.com/crbasopo/bali-travel-project" target="_blank">on Github</a>
+    </footer>
 </body>
 </html>
