Added subtitle to the homepage

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <h1>Welcome to Bali</h1>
+    <h2>A city in Indonesia</h2>
 
     <footer>
         This project was coded by Cheryl R.Basopo and is open-sourced <a href="https://github.com/crbasopo/bali-travel-project" target="_blank">on Github</a>
