--- a/index.html
+++ b/index.html
@@ -10,11 +10,18 @@
     <title>Welcome to Bali</title>
 </head>
 <body>
+    <div class="container">
+    <header>
+    <h3>.TRAVEL.</h3>
     <h1>Welcome to Bali</h1>
-    <h2>A city in Indonesia</h2>
+    <h2>A City in Indonesia</h2>
+    <a href="#more">Learn More</a>
+    </header>
+   
 
     <footer>
         This project was coded by Cheryl R.Basopo and is open-sourced <a href="https://github.com/crbasopo/bali-travel-project" target="_blank">on Github</a>
     </footer>
+    </div>
 </body>
 </html>
