Added the footer

--- a/index.html
+++ b/index.html
@@ -1,27 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/src/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/src/style.css" />
     <title>Welcome to Bali</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-    <header>
-    <h3>.TRAVEL.</h3>
-    <h1>Welcome to Bali</h1>
-    <h2>A City in Indonesia</h2>
-    <a href="#more">Learn More</a>
-    </header>
-   
+      <header>
+        <h3>.TRAVEL.</h3>
+        <h1>Welcome to Bali</h1>
+        <h2>A City in Indonesia</h2>
+        <a href="#more">Learn More</a>
+      </header>
 
-    <footer>
-        This project was coded by Cheryl R.Basopo and is open-sourced <a href="https://github.com/crbasopo/bali-travel-project" target="_blank">on Github</a>
-    </footer>
+      <footer>
+        <section class="grid">
+        <div>
+          <h3>More about Bali</h3>
+          <ul>
+            <li>
+              <a
+                href="https://bali-airport.com/en/international-terminal/index"
+                target="_blank"
+              >
+                Bali Airport website
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://maps.app.goo.gl/1cEDeJSUbtdCpzXK9" target="_blank">
+                Map of Bali
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://yourbalitravelguide.com/info/transport/buses/"
+                target="_blank"
+              >
+                Public transport map
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <h3>About me</h3>
+          <p>
+            Hi! My name is Cheryl and it is my dream to visit Bali in the near
+            future. I'm very fond of the city. I created this page as part of a
+            project for SheCodes Responsive to develop my coding skills.
+          </p>
+        </div>
+        <div>
+          <h3>About this website</h3>
+          <p>
+            I created this page as part of a project for SheCodes Responsive to
+            develop my coding skills.
+            <br />
+            <br />
+            This project was coded by Cheryl R. Basopo and is open-sourced
+            <a
+              href="https://github.com/crbasopo/bali-travel-project"
+              target="_blank"
+              >on Github</a
+            >
+          </p>
+        </div>
+        </section>
+      </footer>
     </div>
-</body>
+
+    
+  
+  </body>
 </html>
