Added the first grid section of the landing page

--- a/index.html
+++ b/index.html
@@ -17,67 +17,95 @@
       <header>
         <h3>.TRAVEL.</h3>
         <h1>Welcome to Bali</h1>
-        <h2>A City in Indonesia</h2>
+        <h2>An Island in Indonesia</h2>
         <a href="#more">Learn More</a>
       </header>
-
+      <main>
+        <section class="grid grid-2-columns">
+            <div>
+        <img src="images/bali-pura-lempuyang-tempel-.jpg" alt="Bali Building" class="img-responsive">
+            </div>
+        <div>
+        <h2>Why Bali?</h2>
+        <h3>Bali</h3>
+        <p>
+          Indonesia is a country of thousands of islands and while Bali is
+          considered an island, it's also a province with a few smaller islands
+          in its territory.. Bali's waters are
+          teeming with marine life with at least 2,000 species of fish and other
+          creatures including coral reefs, dolphins, turtles and much more. This
+          is due to the fact that Bali sits in the centre of the Coral Triangle,
+          the world's centre of marine biodiversity, also dubbed "the Amazon of
+          the seas".
+        </p>
+        <p>
+          Bali has two active volcanoes; Mount Batur standing at over 1,700
+          metres tall and Mount Agung which is 3,000 metres tall. Hiking up
+          these mountains will give you a stunning view of the island that no
+          Bali souvenir can replace. Besides white beaches, Bali has multiple
+          beaches with black sand as well. Thanks to the island's two active
+          volcanoes, you can have a one-of-a-kind experience at black sand
+          volcanic beaches such as Lovina and Amed Beach during your Bali trip.
+        </p>
+        </div>
+        </section>
+      </main>
       <footer>
-        <section class="grid">
-        <div>
-          <h3>More about Bali</h3>
-          <ul>
-            <li>
+        <section class="grid grid-3-columns">
+          <div>
+            <h3>More about Bali</h3>
+            <ul>
+              <li>
+                <a
+                  href="https://bali-airport.com/en/international-terminal/index"
+                  target="_blank"
+                >
+                  Bali Airport website
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://maps.app.goo.gl/1cEDeJSUbtdCpzXK9"
+                  target="_blank"
+                >
+                  Map of Bali
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://yourbalitravelguide.com/info/transport/buses/"
+                  target="_blank"
+                >
+                  Public transport map
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h3>About me</h3>
+            <p>
+              Hi! My name is Cheryl and it is my dream to visit Bali in the near
+              future. I'm very fond of the city. I created this page as part of
+              a project for SheCodes Responsive to develop my coding skills.
+            </p>
+          </div>
+          <div>
+            <h3>About this website</h3>
+            <p>
+              I created this page as part of a project for SheCodes Responsive
+              to develop my coding skills.
+              <br />
+              <br />
+              This project was coded by Cheryl R. Basopo and is open-sourced
               <a
-                href="https://bali-airport.com/en/international-terminal/index"
+                href="https://github.com/crbasopo/bali-travel-project"
                 target="_blank"
+                >on Github</a
               >
-                Bali Airport website
-              </a>
-            </li>
-            <li>
-              <a
-                href="https://maps.app.goo.gl/1cEDeJSUbtdCpzXK9" target="_blank">
-                Map of Bali
-              </a>
-            </li>
-            <li>
-              <a
-                href="https://yourbalitravelguide.com/info/transport/buses/"
-                target="_blank"
-              >
-                Public transport map
-              </a>
-            </li>
-          </ul>
-        </div>
-        <div>
-          <h3>About me</h3>
-          <p>
-            Hi! My name is Cheryl and it is my dream to visit Bali in the near
-            future. I'm very fond of the city. I created this page as part of a
-            project for SheCodes Responsive to develop my coding skills.
-          </p>
-        </div>
-        <div>
-          <h3>About this website</h3>
-          <p>
-            I created this page as part of a project for SheCodes Responsive to
-            develop my coding skills.
-            <br />
-            <br />
-            This project was coded by Cheryl R. Basopo and is open-sourced
-            <a
-              href="https://github.com/crbasopo/bali-travel-project"
-              target="_blank"
-              >on Github</a
-            >
-          </p>
-        </div>
+            </p>
+          </div>
         </section>
       </footer>
     </div>
-
-    
-  
   </body>
 </html>
