Added 3 cards to the landing page

--- a/index.html
+++ b/index.html
@@ -22,36 +22,153 @@
       </header>
       <main>
         <section class="grid grid-2-columns">
-            <div>
-        <img src="images/bali-pura-lempuyang-tempel-.jpg" alt="Bali Building" class="img-responsive">
+          <div>
+            <img
+              src="images/bali-pura-lempuyang-tempel-.jpg"
+              alt="Bali Building"
+              class="img-responsive"
+            />
+          </div>
+          <div>
+            <h2>Why Bali?</h2>
+            <h3>Bali</h3>
+            <p>
+              Indonesia is a country of thousands of islands and while Bali is
+              considered an island, it's also a province with a few smaller
+              islands in its territory.. Bali's waters are teeming with marine
+              life with at least 2,000 species of fish and other creatures
+              including coral reefs, dolphins, turtles and much more. This is
+              due to the fact that Bali sits in the centre of the Coral
+              Triangle, the world's centre of marine biodiversity, also dubbed
+              "the Amazon of the seas".
+            </p>
+            <p>
+              Bali has two active volcanoes; Mount Batur standing at over 1,700
+              metres tall and Mount Agung which is 3,000 metres tall. Hiking up
+              these mountains will give you a stunning view of the island that
+              no Bali souvenir can replace. Besides white beaches, Bali has
+              multiple beaches with black sand as well. Thanks to the island's
+              two active volcanoes, you can have a one-of-a-kind experience at
+              black sand volcanic beaches such as Lovina and Amed Beach during
+              your trip.
+            </p>
+          </div>
+        </section>
+        <section class="secondary">
+          <h2 class="text-center">Cafés</h2>
+          <h3 class="text-center">Cafés to vist in Bali</h3>
+
+          <div class="grid grid-3-columns">
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/coffee-club.jpg"
+                  alt=""
+                  class="img-responsive"
+                />
+              </div>
+
+              <div class="card-body">
+                <h4>The Coffee Club</h4>
+                <p>
+                  The Coffee Club Legian emerges as a cherished destination in
+                  Bali, with many guests extolling its scenic location perfect
+                  for enjoying the stunning beach vistas and spectacular
+                  sunsets.
+                </p>
+                <h5>Address:</h5>
+                <p>
+                  Jl.Pantai Arjuna No.18 Double Six Beach, Legian 80361
+                  Indonesia
+                </p>
+                <h5>Some Features</h5>
+                <p>
+                  Takeout, Reservations, Outdoor Seating, Seating, Parking
+                  Available, Street Parking, Free off-street parking, Highchairs
+                  Available, Serves Alcohol, Full Bar, Wine and Beer, Free Wifi,
+                  Accepts Credit Cards, Table Service, Waterfront, Gift Cards
+                  Available
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://www.facebook.com/thecoffeeclublegian/"
+                  class="btn"
+                  target="_blank"
+                  >Learn more</a
+                >
+              </div>
             </div>
-        <div>
-        <h2>Why Bali?</h2>
-        <h3>Bali</h3>
-        <p>
-          Indonesia is a country of thousands of islands and while Bali is
-          considered an island, it's also a province with a few smaller islands
-          in its territory.. Bali's waters are
-          teeming with marine life with at least 2,000 species of fish and other
-          creatures including coral reefs, dolphins, turtles and much more. This
-          is due to the fact that Bali sits in the centre of the Coral Triangle,
-          the world's centre of marine biodiversity, also dubbed "the Amazon of
-          the seas".
-        </p>
-        <p>
-          Bali has two active volcanoes; Mount Batur standing at over 1,700
-          metres tall and Mount Agung which is 3,000 metres tall. Hiking up
-          these mountains will give you a stunning view of the island that no
-          Bali souvenir can replace. Besides white beaches, Bali has multiple
-          beaches with black sand as well. Thanks to the island's two active
-          volcanoes, you can have a one-of-a-kind experience at black sand
-          volcanic beaches such as Lovina and Amed Beach during your Bali trip.
-        </p>
-        </div>
+             <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/blacklist-cafe.jpg"
+                  alt=""
+                  class="img-responsive"
+                />
+              </div>
+
+              <div class="card-body">
+                <h4>Blacklist Coffee Roasters</h4>
+                <p>
+                  Blacklist Coffee Roasters is a multiple-award winning coffee roaster offering the very best in specialty coffee. We serve modern Australia food for breakfast, brunch and lunch. Full bar service runs from noon with signature cocktails, craft beers and premium wine.
+                </p>
+                <h5>Address:</h5>
+                <p>
+                  Tanah Barak No 6, Canggu 80351 Indonesia
+                </p>
+                <h5>Some Features</h5>
+                <p>
+                  Takeout, Reservations, Outdoor Seating, Parking Available, Free off-street parking, Full Bar, Free Wifi, Accepts Credit Cards, , Dog Friendly, Family style
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://blacklistcoffee.co.id/"
+                  class="btn"
+                  target="_blank"
+                  >Learn more</a
+                >
+              </div>
+            </div>
+             <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/bun-bali-cafe.jpg"
+                  alt=""
+                  class="img-responsive"
+                />
+              </div>
+
+              <div class="card-body">
+                <h4>Bun Bali Café</h4>
+                <p>
+                  Japanese-style Shaved Ice project by NINJA ICE ALL Natural, Vegan, Healthy Homemade Vegan Syrup It melts like snow! Amazing!! We are proud to have the first all female team of baristas in Ubud, and we are ready to serve you delicious drinks with our new espresso machine! All of our coffee comes from SATU-SATU COFFEE COMPANY in Canggu
+                </p>
+                <h5>Address:</h5>
+                <p>
+                 Jl. Goutama Selatan, Ubud 80571 Indonesia
+                </p>
+                <h5>Some Features</h5>
+                <p>
+                  Seating, Wine and Beer, Cash Only, Free Wifi, Table Service, Vegetarian Friendly, Vegan Options, Gluten Free Options
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://bunbalicafe.com/"
+                  class="btn"
+                  target="_blank"
+                  >Learn more</a
+                >
+              </div>
+            </div>
+          </div>
+          
         </section>
       </main>
       <footer>
-        <section class="grid grid-3-columns">
+        <section class="grid grid-3-columns-with-first-narrow">
           <div>
             <h3>More about Bali</h3>
             <ul>
