Added Responsive Google Maps embed

--- a/index.html
+++ b/index.html
@@ -60,12 +60,20 @@
 
           <div class="grid grid-3-columns">
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-2-columns">
                 <img
                   src="images/coffee-club.jpg"
                   alt=""
                   class="img-responsive"
                 />
+                <iframe
+                  class="embed"
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3943.9172304267895!2d115.16030857596601!3d-8.699410288639585!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd246e7356cbc55%3A0x5fa6be9994455915!2sAnantara%20Vacation%20Club%20Legian%20Bali!5e0!3m2!1sen!2sza!4v1731328805606!5m2!1sen!2sza"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
 
               <div class="card-body">
@@ -99,27 +107,39 @@
                 >
               </div>
             </div>
-             <div class="card">
-              <div class="card-header">
+            <div class="card">
+              <div class="card-header grid grid-2-columns">
                 <img
                   src="images/blacklist-cafe.jpg"
                   alt=""
                   class="img-responsive"
                 />
+                <iframe
+                class="embed"
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3944.4349197206134!2d115.13162457596553!3d-8.65011968799106!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd2397be26e002f%3A0x176358201f97fe5e!2sBlacklist%20Coffee%20Roasters!5e0!3m2!1sen!2sza!4v1731329624182!5m2!1sen!2sza"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
 
               <div class="card-body">
                 <h4>Blacklist Coffee Roasters</h4>
                 <p>
-                  Blacklist Coffee Roasters is a multiple-award winning coffee roaster offering the very best in specialty coffee. We serve modern Australia food for breakfast, brunch and lunch. Full bar service runs from noon with signature cocktails, craft beers and premium wine.
+                  Blacklist Coffee Roasters is a multiple-award winning coffee
+                  roaster offering the very best in specialty coffee. We serve
+                  modern Australia food for breakfast, brunch and lunch. Full
+                  bar service runs from noon with signature cocktails, craft
+                  beers and premium wine.
                 </p>
                 <h5>Address:</h5>
-                <p>
-                  Tanah Barak No 6, Canggu 80351 Indonesia
-                </p>
+                <p>Tanah Barak No 6, Canggu 80351 Indonesia</p>
                 <h5>Some Features</h5>
                 <p>
-                  Takeout, Reservations, Outdoor Seating, Parking Available, Free off-street parking, Full Bar, Free Wifi, Accepts Credit Cards, , Dog Friendly, Family style
+                  Takeout, Reservations, Outdoor Seating, Parking Available,
+                  Free off-street parking, Full Bar, Free Wifi, Accepts Credit
+                  Cards, , Dog Friendly, Family style
                 </p>
               </div>
               <div class="card-footer">
@@ -131,40 +151,48 @@
                 >
               </div>
             </div>
-             <div class="card">
-              <div class="card-header">
+            <div class="card">
+              <div class="card-header grid grid-2-columns">
                 <img
                   src="images/bun-bali-cafe.jpg"
                   alt=""
                   class="img-responsive"
                 />
+                <iframe
+                  class="embed"
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3945.880117685894!2d115.26128617596386!3d-8.5110193861822!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd23d6c6e60f9cb%3A0x90d068bb41414193!2sJl.%20Goutama%20Sel.%2C%20Ubud%2C%20Kecamatan%20Ubud%2C%20Kabupaten%20Gianyar%2C%20Bali%2080571%2C%20Indonesia!5e0!3m2!1sen!2sza!4v1731328639937!5m2!1sen!2sza"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
 
               <div class="card-body">
                 <h4>Bun Bali Café</h4>
                 <p>
-                  Japanese-style Shaved Ice project by NINJA ICE ALL Natural, Vegan, Healthy Homemade Vegan Syrup It melts like snow! Amazing!! We are proud to have the first all female team of baristas in Ubud, and we are ready to serve you delicious drinks with our new espresso machine! All of our coffee comes from SATU-SATU COFFEE COMPANY in Canggu
+                  Japanese-style Shaved Ice project by NINJA ICE ALL Natural,
+                  Vegan, Healthy Homemade Vegan Syrup It melts like snow!
+                  Amazing!! We are proud to have the first all female team of
+                  baristas in Ubud, and we are ready to serve you delicious
+                  drinks with our new espresso machine! All of our coffee comes
+                  from SATU-SATU COFFEE COMPANY in Canggu
                 </p>
                 <h5>Address:</h5>
-                <p>
-                 Jl. Goutama Selatan, Ubud 80571 Indonesia
-                </p>
+                <p>Jl. Goutama Selatan, Ubud 80571 Indonesia</p>
                 <h5>Some Features</h5>
                 <p>
-                  Seating, Wine and Beer, Cash Only, Free Wifi, Table Service, Vegetarian Friendly, Vegan Options, Gluten Free Options
+                  Seating, Wine and Beer, Cash Only, Free Wifi, Table Service,
+                  Vegetarian Friendly, Vegan Options, Gluten Free Options
                 </p>
               </div>
               <div class="card-footer">
-                <a
-                  href="https://bunbalicafe.com/"
-                  class="btn"
-                  target="_blank"
+                <a href="https://bunbalicafe.com/" class="btn" target="_blank"
                   >Learn more</a
                 >
               </div>
             </div>
           </div>
-          
         </section>
       </main>
       <footer>
