Added a Gallery and gallery images in a grid

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <header>
         <h3>.TRAVEL.</h3>
         <h1>Welcome to Bali</h1>
-        <h2>An Island in Indonesia</h2>
+        <h2>An island in Indonesia</h2>
         <a href="#more">Learn More</a>
       </header>
       <main>
@@ -176,7 +176,7 @@
                   Amazing!! We are proud to have the first all female team of
                   baristas in Ubud, and we are ready to serve you delicious
                   drinks with our new espresso machine! All of our coffee comes
-                  from SATU-SATU COFFEE COMPANY in Canggu
+                  from SATU-SATU COFFEE COMPANY.
                 </p>
                 <h5>Address:</h5>
                 <p>Jl. Goutama Selatan, Ubud 80571 Indonesia</p>
@@ -193,6 +193,22 @@
               </div>
             </div>
           </div>
+        </section>
+
+        <section>
+            <h2 class="text-center">Gallery</h2>
+            <h3 class="text-center">Photos from Bali</h3>
+
+            <div class="grid grid-3-columns">
+                <img src="images/bali1.jpg" alt="" class="img-responsive">
+                <img src="images/bali2.jpg" alt="" class="img-responsive">
+                <img src="images/bali3.jpg" alt="" class="img-responsive">
+                <img src="images/bali4.jpg" alt="" class="img-responsive">
+                <img src="images/bali5.jpg" alt="" class="img-responsive">
+                <img src="images/bali8.jpg" alt="" class="img-responsive">
+
+            </div>
+
         </section>
       </main>
       <footer>
@@ -246,8 +262,9 @@
                 href="https://github.com/crbasopo/bali-travel-project"
                 target="_blank"
                 >on Github</a
-              >
+              > and is hosted <a href="https://my-bali-travel-website.netlify.app/" target="_blank"> on Netlify</a>
             </p>
+            
           </div>
         </section>
       </footer>
