--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             <h3>About me</h3>
             <p>
               Hi! My name is Cheryl and it is my dream to visit Bali in the near
-              future. I'm very fond of the city. I created this page as part of
+              future. I'm very fond of the island. I created this page as part of
               a project for SheCodes Responsive to develop my coding skills.
             </p>
           </div>
