--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             />
           </div>
           <div>
+            <a name="more"></a>
             <h2>Why Bali?</h2>
             <h3>Bali</h3>
             <p>
