--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p>
               Indonesia is a country of thousands of islands and while Bali is
               considered an island, it's also a province with a few smaller
-              islands in its territory.. Bali's waters are teeming with marine
+              islands in its territory. Bali's waters are teeming with marine
               life with at least 2,000 species of fish and other creatures
               including coral reefs, dolphins, turtles and much more. This is
               due to the fact that Bali sits in the centre of the Coral
